[package]
name = "qodot"
version = "2.0.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quarchitect = { path = "../quarchitect" }
gdnative = "0.8.0"

[lib]
crate-type = ["cdylib"]
